force-app/main/default/objects/ReplacementPart__c/ReplacementPart__c.object-meta.xml
<CustomObject>
    <label>Replacement Part</label>
    <nameField>
        <label>Replacement Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Replacement Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>