force-app/main/default/objects/ReplacementPart__c/fields/RepairOrder__c.field-meta.xml
<CustomField>
    <fullName>RepairOrder__c</fullName>
    <label>Repair Order</label>
    <referenceTo>RepairOrder__c</referenceTo>
    <relationshipLabel>Replacement Parts</relationshipLabel>
    <relationshipName>ReplacementParts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>