force-app/main/default/objects/ReplacementPart__c/fields/TotalCost__c.field-meta.xml
<CustomField>
    <fullName>TotalCost__c</fullName>
    <formula>UnitCost__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>